force-app/main/default/objects/Order_Type_Dependency__mdt/Order_Type_Dependency__mdt.object-meta.xml
<CustomObject>
    <label>Order Type Dependency</label>
    <pluralLabel>Order Type Dependencies</pluralLabel>
</CustomObject>