force-app/main/default/objects/Order_Type_Dependency__mdt/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZTRK</fullName>
                <default>true</default>
                <label>ZTRK</label>
            </value>
            <value>
                <fullName>ZCST</fullName>
            </value>
            <value>
                <fullName>ZDSO</fullName>
            </value>
            <value>
                <fullName>ZCSH</fullName>
            </value>
            <value>
                <fullName>ZSSO</fullName>
            </value>
            <value>
                <fullName>ZEXO</fullName>
            </value>
            <value>
                <fullName>ZRET</fullName>
            </value>
            <value>
                <fullName>ZERE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>