force-app/main/default/objects/Order_Type_Dependency__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Division__c</columns>
    <columns>Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>